--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div style="background-color:rgb(109, 216, 249);">
         <a style="background-color: rgb(101, 211, 254); color:rgb(0, 0, 0); font-size: 20pt;">Learning English Easily</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="AboutUs.html">About Us</a>
         <a href="Teachers.html">Teachers</a>
         <a href="ContactUs.html">Contact Us</a>
@@ -32,7 +32,7 @@
 
     <!-- Centered image -->
     <div style="text-align: center;">
-        <img src="D:\disktop\Project\english.jpg" alt="Card Image" style="width: 60%; display: block; margin: auto;">
+        <img src="Project/english.jpg" alt="Card Image" style="width: 60%; display: block; margin: auto;">
     </div>
 
     <br><br>
@@ -53,3 +53,4 @@
 
 </body>
 </html>
+
