--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 <body style="background-color: #a2e2f7db;">
 
     <div style="background-color:rgb(109, 216, 249);">
-        <a style="background-color: rgb(101, 211, 254); color:rgb(0, 0, 0); font-size: 20pt;">Learning English Easily</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a style="background-color: rgb(101, 211, 254); color:rgb(0, 0, 0); font-size: 20pt;">
+            Learning English Easily
+        </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
         <a href="index.html">Home</a>
-        <a href="AboutUs.html">About Us</a>
-        <a href="Teachers.html">Teachers</a>
-        <a href="ContactUs.html">Contact Us</a>
-        <a href="Review.html">Review</a>
-        <a href="WorkSheets.html">Work Sheets</a>
+        <a href="Project/AboutUs.html">About Us</a>
+        <a href="Project/Teachers.html">Teachers</a>
+        <a href="Project/ContactUs.html">Contact Us</a>
+        <a href="Project/Review.html">Review</a>
+        <a href="Project/WorkSheets.html">Work Sheets</a>
     </div>
 
     <br><br>
@@ -35,22 +38,21 @@
         <img src="Project/english.jpg" alt="Card Image" style="width: 60%; display: block; margin: auto;">
     </div>
 
-    <br><br>
-    <br><br>
+    <br><br><br><br>
 
     <div style="font-size: 200%; text-align: center;">
-        In our Website you will be able to get free classes and free Worksheets so you can learn English easly , also u can contact us for more anytime .. we will be happy to help
+        In our Website you will be able to get free classes and free Worksheets so you can learn English easly, 
+        also you can contact us anytime — we will be happy to help.
     </div>
 
     <h3 style="text-align: center; color: rgb(0, 17, 90);">
-        If you want to know more about our Websites go to the
-        <a style="color: blue;" href="AboutUs.html">About Us</a> Page
+        If you want to know more about our Website go to the
+        <a style="color: blue;" href="Project/AboutUs.html">About Us</a> Page
     </h3>
 
-    <a href="AboutUs.html">
+    <a href="Project/AboutUs.html">
         <div style="text-align: center; color: rgb(19, 34, 195);">Click Here</div>
     </a>
 
 </body>
 </html>
-
